fix: wrap link-page social icons (#128)

--- a/assets/css/extrch-links.css
+++ b/assets/css/extrch-links.css
@@ -300,6 +300,7 @@ body {
 
 .extrch-link-page-socials {
   display: flex;
+  flex-wrap: wrap;
   gap: 1.1em;
   justify-content: center;
   margin-bottom: 1.5em;
